Updated project with the latest changes to support the language demonstration programs and bug fixes. Applied to the 0.5.1 JS interpreter, java and c# will be updated at the end of this effort.

--- a/public_html/lang_demo/INDEX.HTML
+++ b/public_html/lang_demo/INDEX.HTML
@@ -152,7 +152,7 @@
                 <span class="desc">
                     This program demonstrates the declaration of arrays using the advanced, non-strict, form.
                 </span>
-            </li>  
+            </li>
             <li>
                 <span class="link">
                 <a target="new" href="PRG016_DeclarationExampleBasic.HTML">PRG016_DeclarationExampleBasic</a>
@@ -160,6 +160,43 @@
                 <br/>
                 <span class="desc">
                     This program demonstrates the declaration basic data type variables.
+                </span>
+            </li>
+            <li>
+                <span class="link">
+                <a target="new" href="PRG017_RefExample1.HTML">PRG017_RefExample1</a>
+                </span>
+                <br/>
+                <span class="desc">
+                    An example program that demonstrates using dynamic referencing to complete the reference string for some 
+                    {ref} objects.
+                </span>
+            </li>
+            <li>
+                <span class="link">
+                <a target="new" href="PRG018_RefExample2.HTML">PRG018_RefExample2</a>
+                </span>
+                <br/>
+                <span class="desc">
+                    This program demonstrates using dynamic referencing.
+                </span>
+            </li>
+            <li>
+                <span class="link">
+                <a target="new" href="PRG019_RefExample3.HTML">PRG019_RefExample3</a>
+                </span>
+                <br/>
+                <span class="desc">
+                    This demonstration program shows a reference example that gets a value for a remote variable.
+                </span>
+            </li>
+            <li>
+                <span class="link">
+                <a target="new" href="PRG020_RefExample4.HTML">PRG020_RefExample4</a>
+                </span>
+                <br/>
+                <span class="desc">
+                    This program demonstrates using dynamic referencing with array variables and array elements.
                 </span>
             </li>
         </ul>
