Updated project with some slight adjustments to the description text of the demonstration programs index.html.

--- a/public_html/lang_demo/INDEX.HTML
+++ b/public_html/lang_demo/INDEX.HTML
@@ -5,8 +5,18 @@
         <title>JsonPL Program: MAIN INDEX</title>
     </head>
     <body>
-        <span class="hdr">Language Demonstration:</span>
-        <br/>
+        <span class="hdr">Language Demonstration:</span>        
+        <br/><br/>
+
+        <span class="desc">
+            Note:<br/>
+            Earlier program demonstration/tests can be found in the "cfg" folder, ../cfg, directory.
+            These should all work find but are deprecated with regard to the demonstration/testing of the language.
+            The very earliest set of language tests can be found in the "EXEC4.HTML" file, ../EXEC4.HTML. The code
+            ran in this file should work but is deprecated with regard to language demonstration/testing.
+        </span>
+        <br/><br/>
+        
         <ul>
             <li>
                 <span class="link">
