--- a/public_html/lang_demo/PRG019_RefExample3.HTML
+++ b/public_html/lang_demo/PRG019_RefExample3.HTML
@@ -118,6 +118,8 @@
         <div style="float:left; clear:both;">
             <span style="font-size:18px; font-weight:bold;">Desc:</span>
             <span style="font-size:18px; font-weight:normal;">
+                This program requires a server to support the backend functionality.
+                Requires the basic node js server is running. Use the command: 'node EXEC4SVR_BASIC.JS' in the 'svr' directory.                
                 This demonstration program shows a reference example that gets a value for a remote variable.
             </span>            
         </div>
