Updated project with the latest set of demonstration programs for the JS 0.5.1 interpreter, updates to the Java and C# version will follow the completion of the demonstration program set.

--- a/public_html/lang_demo/INDEX.HTML
+++ b/public_html/lang_demo/INDEX.HTML
@@ -209,6 +209,27 @@
                     This program demonstrates using dynamic referencing with array variables and array elements.
                 </span>
             </li>
+            <li>
+                <span class="link">
+                <a target="new" href="PRG021_AsgnExample1.HTML">PRG021_AsgnExample1</a>
+                </span>
+                <br/>
+                <span class="desc">
+                    This program demonstrates assigning a value to a local function variables. The variable is referenced 
+                    by the {ref} object in the "left" field of the {asgn} object.
+                </span>
+            </li>
+            <li>
+                <span class="link">
+                <a target="new" href="PRG022_AsgnExample2.HTML">PRG022_AsgnExample2</a>
+                </span>
+                <br/>
+                <span class="desc">
+                    This program demonstrates assignment using a {ref} object with a reference string that points
+                    to a class variable.
+                </span>
+            </li>
+
         </ul>
     </body>
 </html>
