Updated project with a few more assignment example programs in the lang_demo set of language demonstration files. Java and CS versions of the 0.5.1 interpreter will be updated subsequently.

--- a/public_html/lang_demo/INDEX.HTML
+++ b/public_html/lang_demo/INDEX.HTML
@@ -216,7 +216,7 @@
                 <br/>
                 <span class="desc">
                     This program demonstrates assigning a value to a local function variables. The variable is referenced 
-                    by the {ref} object in the "left" field of the {asgn} object.
+                    by the {ref} object in the 'left' field of the {asgn} object.
                 </span>
             </li>
             <li>
@@ -229,7 +229,16 @@
                     to a class variable.
                 </span>
             </li>
-
+            <li>
+                <span class="link">
+                <a target="new" href="PRG023_AsgnExample3.HTML">PRG023_AsgnExample3</a>
+                </span>
+                <br/>
+                <span class="desc">
+                    This example program demonstrates assigning a value to a class variable, tmpInt1, from a {ref} object that points to
+                    a function variables, '$.vars.rmpInt2', followed by an example with a remote, URL based, variable.
+                </span>
+            </li>
         </ul>
     </body>
 </html>
