Updated project with the latest changes to support documentation of the language.

--- a/public_html/lang_demo/INDEX.HTML
+++ b/public_html/lang_demo/INDEX.HTML
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css"> 
-        <title>JsonPL Program: MAIN INDEX</title>
+        <title>JsonPL Language Demonstration Programs: MAIN INDEX</title>
     </head>
     <body>
         <span class="hdr">Language Demonstration:</span>        
@@ -20,7 +20,7 @@
         <ul>
             <li>
                 <span class="link">
-                <a target="new" href="PRG001_ArgExample1.HTML">PRG001_ArgExample1</a>
+                    <a target="new" href="PRG001_ArgExample1.HTML">PRG001_ArgExample1</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -29,7 +29,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG002_ArgExample2.HTML">PRG002_ArgExample2</a>
+                    <a target="new" href="PRG002_ArgExample2.HTML">PRG002_ArgExample2</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -39,7 +39,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG003_ArgExample3.HTML">PRG003_ArgExample3</a>
+                    <a target="new" href="PRG003_ArgExample3.HTML">PRG003_ArgExample3</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -48,7 +48,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG004_ArgExample4.HTML">PRG004_ArgExample4</a>
+                    <a target="new" href="PRG004_ArgExample4.HTML">PRG004_ArgExample4</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -57,7 +57,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG005_ArgExample5.HTML">PRG005_ArgExample5</a>
+                    <a target="new" href="PRG005_ArgExample5.HTML">PRG005_ArgExample5</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -66,7 +66,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG006_CallExample1.HTML">PRG006_CallExample1</a>
+                    <a target="new" href="PRG006_CallExample1.HTML">PRG006_CallExample1</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -75,7 +75,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG007_CallExample2.HTML">PRG007_CallExample2</a>
+                    <a target="new" href="PRG007_CallExample2.HTML">PRG007_CallExample2</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -84,7 +84,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG008_CallExample3.HTML">PRG008_CallExample3</a>
+                    <a target="new" href="PRG008_CallExample3.HTML">PRG008_CallExample3</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -93,7 +93,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG009_CallExample4.HTML">PRG009_CallExample4</a>
+                    <a target="new" href="PRG009_CallExample4.HTML">PRG009_CallExample4</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -102,7 +102,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG010_CallExample5.HTML">PRG010_CallExample5</a>
+                    <a target="new" href="PRG010_CallExample5.HTML">PRG010_CallExample5</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -111,7 +111,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG011_CallExample6.HTML">PRG011_CallExample6</a>
+                    <a target="new" href="PRG011_CallExample6.HTML">PRG011_CallExample6</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -120,7 +120,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG012_CallExample7.HTML">PRG012_CallExample7</a>
+                    <a target="new" href="PRG012_CallExample7.HTML">PRG012_CallExample7</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -129,7 +129,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG013_CallExample8.HTML">PRG013_CallExample8</a>
+                    <a target="new" href="PRG013_CallExample8.HTML">PRG013_CallExample8</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -138,7 +138,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG012_CallExample7.HTML">PRG012_CallExample7</a>
+                    <a target="new" href="PRG012_CallExample7.HTML">PRG012_CallExample7</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -147,7 +147,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG014_DeclarationExampleAdv1.HTML">PRG014_DeclarationExampleAdv1</a>
+                    <a target="new" href="PRG014_DeclarationExampleAdv1.HTML">PRG014_DeclarationExampleAdv1</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -156,7 +156,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG015_DeclarationExampleAdv2.HTML">PRG015_DeclarationExampleAdv2</a>
+                    <a target="new" href="PRG015_DeclarationExampleAdv2.HTML">PRG015_DeclarationExampleAdv2</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -165,7 +165,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG016_DeclarationExampleBasic.HTML">PRG016_DeclarationExampleBasic</a>
+                    <a target="new" href="PRG016_DeclarationExampleBasic.HTML">PRG016_DeclarationExampleBasic</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -174,7 +174,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG017_RefExample1.HTML">PRG017_RefExample1</a>
+                    <a target="new" href="PRG017_RefExample1.HTML">PRG017_RefExample1</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -184,7 +184,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG018_RefExample2.HTML">PRG018_RefExample2</a>
+                    <a target="new" href="PRG018_RefExample2.HTML">PRG018_RefExample2</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -193,7 +193,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG019_RefExample3.HTML">PRG019_RefExample3</a>
+                    <a target="new" href="PRG019_RefExample3.HTML">PRG019_RefExample3</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -202,7 +202,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG020_RefExample4.HTML">PRG020_RefExample4</a>
+                    <a target="new" href="PRG020_RefExample4.HTML">PRG020_RefExample4</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -211,7 +211,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG021_AsgnExample1.HTML">PRG021_AsgnExample1</a>
+                    <a target="new" href="PRG021_AsgnExample1.HTML">PRG021_AsgnExample1</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -221,7 +221,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG022_AsgnExample2.HTML">PRG022_AsgnExample2</a>
+                    <a target="new" href="PRG022_AsgnExample2.HTML">PRG022_AsgnExample2</a>
                 </span>
                 <br/>
                 <span class="desc">
@@ -231,7 +231,7 @@
             </li>
             <li>
                 <span class="link">
-                <a target="new" href="PRG023_AsgnExample3.HTML">PRG023_AsgnExample3</a>
+                    <a target="new" href="PRG023_AsgnExample3.HTML">PRG023_AsgnExample3</a>
                 </span>
                 <br/>
                 <span class="desc">
