Updated project with the latest language demonstration work.

--- a/public_html/lang_demo/INDEX.HTML
+++ b/public_html/lang_demo/INDEX.HTML
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css"> 
+        <link rel="stylesheet" href="../styles/style.css"> 
         <title>JsonPL Language Demonstration Programs: MAIN INDEX</title>
     </head>
     <body>
@@ -138,15 +138,6 @@
             </li>
             <li>
                 <span class="link">
-                    <a target="new" href="PRG012_CallExample7.HTML">PRG012_CallExample7</a>
-                </span>
-                <br/>
-                <span class="desc">
-                    This program demonstrates calling the default function, 'call' attribute of the {class} object, of a library class using a full reference string.
-                </span>
-            </li>
-            <li>
-                <span class="link">
                     <a target="new" href="PRG014_DeclarationExampleAdv1.HTML">PRG014_DeclarationExampleAdv1</a>
                 </span>
                 <br/>
@@ -237,6 +228,24 @@
                 <span class="desc">
                     This example program demonstrates assigning a value to a class variable, tmpInt1, from a {ref} object that points to
                     a function variables, '$.vars.rmpInt2', followed by an example with a remote, URL based, variable.
+                </span>
+            </li>
+            <li>
+                <span class="link">
+                    <a target="new" href="PRG024_AsgnExample4.HTML">PRG024_AsgnExample4</a>
+                </span>
+                <br/>
+                <span class="desc">
+                    This example program demonstrates four different {asgn} object implementations using arrays and reference strings.
+                </span>
+            </li>
+            <li>
+                <span class="link">
+                    <a target="new" href="PRG025_AsgnExample5.HTML">PRG025_AsgnExample5</a>
+                </span>
+                <br/>
+                <span class="desc">
+                    TODO: finish this description ...
                 </span>
             </li>
         </ul>
